--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link rel=mask-icon href=https://a199348006.github.io/my-blog/%3Clink%20/%20abs%20url%3E>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <link rel=alternate type=application/rss+xml href=https://a199348006.github.io/my-blog/index.xml>
 <link rel=alternate type=application/json href=https://a199348006.github.io/my-blog/index.json>
 <noscript>
@@ -74,7 +74,7 @@
 <main class=main>
 <article class="first-entry home-info">
 <header class=entry-header>
-<h1>Hi there 👋</h1>
+<h1>A BOLD ATTEMPT IS HALF SUCCESS</h1>
 </header>
 <section class=entry-content>
 <p>Welcome to my blog</p>
@@ -89,6 +89,25 @@
 </a>
 </div>
 </footer>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>MQTT and mqtt.js
+</h2>
+</header>
+<section class=entry-content>
+<p>前言 在這裡只記錄些實作過程中的摘要，若是想觀看圖文並茂的文章及教程可以至最下方的參考來源。
+套件版本：
+mosquitto: 2.0.14 MQTT Explorer: 0.4.0-beta mqtt.js: 4.3.5 MQTT簡介 MQTT的架構中分為以下三者：
+Publisher(發佈者)：發佈訊息的人 Broker(代理人)：負責接收來自Publisher的訊息並發訊息給Subscribe Subscriber(訂閱者)：接收訊息的人 MQTT訊息格式 Control Header及Remaining Length皆必須存在，已Publish Message來說Variable Header>會放入topic主題，Payload放入傳遞的訊息內容。
+Control Header Remaining Length Variable Header: topic Payload: message 網路品質(QoS) MQTT定義了0, 1和2三個層級的品質設定：
+0: 最多傳送一次(at most once) 1: 至少傳送一次(at leat once) 2: 確實傳送一次(exactly once) 詳細教程
+安裝Mosquitto Windows及相關設定 Mosquitto安裝 Mosquitto Download
+安裝過程中Service可以取消勾選(手動開啟BQTT Broker功能)
+Service: 手動開啟BQTT Broker功能 Service: 開機執行 防火牆也需要到進階設定->輸入規則->新增規則->將預設port: 1883開啟，輸出規則重複上述操作。...</p>
+</section>
+<footer class=entry-footer><span title="2022-02-17 16:21:29 +0800 +0800">February 17, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Chowder</footer>
+<a class=entry-link aria-label="post link to MQTT and mqtt.js" href=https://a199348006.github.io/my-blog/2022/02/mqtt-nodejs/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
